# Pandora

./: .gitmodules  CMakeLists.txt  README.md  macdeploy.sh
cmake/: FindHUNSPELL.cmake  MacOSXBundleInfo.plist.in
src/: CMakeLists.txt  appconfig.cpp  appconfig.h  documentgenerator.cpp  documentgenerator.h  filebrowserinputwidget.h  filebrowserinputwidget.ui  main.cpp  maintoolbar.cpp  maintoolbar.h  maintoolbar.ui  mainwindow.cpp  mainwindow.h  mainwindow.ui  markdowneditor.cpp  markdowneditor.h  markdowneditor.ui  markdowneditorhighlighter.cpp  markdowneditorhighlighter.h  markdownviewer.cpp  markdownviewer.h  preferencesdialog.cpp  preferencesdialog.h  preferencesdialog.ui  processrunner.h  resources.qrc
src/common/: appconfig.cpp  appconfig.h  filebrowserinputwidget.cpp  filebrowserinputwidget.h  processrunner.cpp
src/icons/: README.md
src/markdowncollection/: collectionlistview.cpp  collectionlistview.h  markdowncollection.cpp  markdowncollection.h  markdowncollectionitem.cpp  markdowncollectionitem.h  richtextstyleditemdelegate.cpp  richtextstyleditemdelegate.h
src/markdowneditor/: documentstatisticsdialog.cpp  documentstatisticsdialog.h  documentstatisticsdialog.ui  findreplaceactionsdelegate.cpp  findreplaceactionsdelegate.h  findreplacewidget.cpp  findreplacewidget.h  findreplacewidget.ui  formattingtoolbar.cpp  formattingtoolbar.h  formattingtoolbar.ui  grammarcheckactionsdelegate.cpp  grammarcheckactionsdelegate.h  imagepreviewdialog.cpp  imagepreviewdialog.h  imagepreviewdialog.ui  insertmodifyimagedialog.cpp  insertmodifyimagedialog.h  insertmodifyimagedialog.ui  insertmodifylinkdialog.cpp  insertmodifylinkdialog.h  insertmodifylinkdialog.ui  languagetool.cpp  languagetool.h  languagetoolmatch.cpp  languagetoolmatch.h  markdowneditor.cpp  markdowneditor.h  markdowneditor.ui  markdowneditorhighlighter.h  markdowntextedit.cpp  markdowntextedit.h  proofreadactionsdelegatebase.cpp  proofreadactionsdelegatebase.h  spellcheck.cpp  spellcheck.h  spellcheckactionsdelegate.cpp  spellcheckactionsdelegate.h  textmanipulationactionsdelegate.cpp  textmanipulationactionsdelegate.h
src/markdownviewer/: documentgenerator.cpp  documentgenerator.h  emptymarkdownviewer.html  markdownviewer.cpp  markdownviewer.h
src/preferences/: filebrowserinputwidget.cpp  preferencesdialog.cpp  preferencesdialog.h  preferencesdialog.ui
